--- a/django_ckeditor_5/package.json
+++ b/django_ckeditor_5/package.json
@@ -42,7 +42,8 @@
     "@ckeditor/ckeditor5-theme-lark": "^41.1.0",
     "@ckeditor/ckeditor5-ui": "^41.1.0",
     "@ckeditor/ckeditor5-upload": "^41.1.0",
-    "@ckeditor/ckeditor5-word-count": "^41.1.0"
+    "@ckeditor/ckeditor5-word-count": "^41.1.0",
+    "@liqd/ckeditor5-file-uploader": "github:liqd/ckeditor5-file-uploader"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "^41.1.0",
