--- a/django_ckeditor_5/package.json
+++ b/django_ckeditor_5/package.json
@@ -1,6 +1,6 @@
 {
   "name": "django_ckeditor_5",
-  "version": "0.2.10",
+  "version": "0.2.11-liqd",
   "description": "",
   "main": "index.js",
   "scripts": {
