--- a/django_ckeditor_5/package.json
+++ b/django_ckeditor_5/package.json
@@ -56,6 +56,7 @@
     "@ckeditor/ckeditor5-dev-translations": "^39.8.0",
     "@ckeditor/ckeditor5-dev-utils": "^39.8.0",
     "@ckeditor/ckeditor5-theme-lark": "^41.3.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "7",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss-loader": "8",
