--- a/django_ckeditor_5/package.json
+++ b/django_ckeditor_5/package.json
@@ -44,7 +44,7 @@
     "@ckeditor/ckeditor5-upload": "^41.1.0",
     "@ckeditor/ckeditor5-word-count": "^41.1.0",
     "@liqd/ckeditor5-accordion": "github:liqd/ckeditor5-accordion",
-    "@liqd/ckeditor5-file-uploader": "github:liqd/ckeditor5-file-uploader"
+    "@liqd/ckeditor5-file-uploader": "github:liqd/ckeditor5-file-uploader#v0.0.1"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "^41.1.0",
