--- a/django_ckeditor_5/package.json
+++ b/django_ckeditor_5/package.json
@@ -43,8 +43,8 @@
     "@ckeditor/ckeditor5-ui": "^41.1.0",
     "@ckeditor/ckeditor5-upload": "^41.1.0",
     "@ckeditor/ckeditor5-word-count": "^41.1.0",
-    "@liqd/ckeditor5-accordion": "github:liqd/ckeditor5-accordion",
-    "@liqd/ckeditor5-file-uploader": "github:liqd/ckeditor5-file-uploader#v0.0.1"
+    "@liqd/ckeditor5-accordion": "github:liqd/ckeditor5-accordion#v0.0.2",
+    "@liqd/ckeditor5-file-uploader": "github:liqd/ckeditor5-file-uploader#v0.0.2"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "^41.1.0",
