--- a/example/pyproject.toml
+++ b/example/pyproject.toml
@@ -49,7 +49,7 @@ exclude = '''
 [tool.pytest.ini_options]
 # py.test configuration: http://doc.pytest.org/en/latest/customize.html
 norecursedirs = "tests/fixtures *.egg .eggs dist build docs .tox .git __pycache__ venv env migrations"
-DJANGO_SETTINGS_MODULE = "blog.settings"
+DJANGO_SETTINGS_MODULE = "blog.test_settings"
 filterwarnings = """
   ignore::DeprecationWarning
 """
