add option to limit the file size for image and file uploads
- add a validator to validate the max file size (FileMaxSizeValidator)
- return the first form error in a JsonResponse so it is actually shown to the
  user instead of a generic error message.
- add separate test_settings for pytest (to allow testing with small
  file sizes)
- add tests for file extension and file size

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -181,5 +181,6 @@ max-statements = 50  # Recommended: 50
 "example/blog/conftest.py" = ["SIM115"]
 "example/blog/manage.py" = ["TRY003"]
 "example/blog/blog/settings.py" = ["N816", "S105"]
+"example/blog/blog/test_settings.py" = ["F403", "I001"]
 "example/blog/tests/*" = ["S101"]
 "example/blog/tests/test_upload_file.py" = ["ARG001"]
